# Cartridge2

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.alphazero  LICENSE  Makefile  README.md  TODO.md  config.defaults.toml  config.toml  docker-compose.k8s.yml  docker-compose.yml
.claude/: settings.local.json
.github/: README.md
.github/workflows/: README.md  ci.yml
actor/: Cargo.toml  README.md
actor/src/: actor.rs  config.rs  health.rs  main.rs  mcts_policy.rs  metrics.rs  model_watcher.rs  stats.rs
actor/src/storage/: mod.rs  postgres.rs
documentation/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  FILE_LENGTH_ANALYSIS.md  GENERALS_PORT_PHASE1.md  MAINTENANCE_TASKS.md  MVP.md  claude-k8s-ideas.md
documentation/claude/: 2025-01-16-secret-management-design.md  2026-07-20-generals-phase1-report-review.md  prometheus.md
engine/: Cargo.toml  README.md
engine/engine-config/: Cargo.toml  SCHEMA.md
engine/engine-config/src/: defaults.rs  lib.rs  loader.rs  logging.rs  structs.rs  tests.rs
engine/engine-core/src/: adapter.rs  context.rs  context_tests.rs  game_utils.rs  legal_mask.rs  lib.rs  metadata.rs  registry.rs  registry_tests.rs  typed.rs  typed_tests.rs
engine/engine-games/: Cargo.toml
engine/engine-games/src/: lib.rs
engine/games-connect4/: Cargo.toml
engine/games-connect4/benches/: engine.rs
engine/games-connect4/src/: lib.rs  tests.rs
engine/games-generals/: Cargo.toml
engine/games-generals/examples/: random_playout.rs
engine/games-generals/src/: action.rs  board.rs  lib.rs  mapgen.rs  movement.rs  obs.rs  params.rs  rules.rs  tests.rs
engine/games-othello/: Cargo.toml  README.md
engine/games-othello/benches/: engine.rs
engine/games-othello/src/: lib.rs  tests.rs
engine/games-tictactoe/src/: lib.rs  tests.rs
engine/mcts/: Cargo.toml
engine/mcts/benches/: mcts.rs
engine/mcts/examples/: generals_policy_probe.rs  generals_strength_probe.rs
engine/mcts/src/: config.rs  evaluator.rs  lib.rs  node.rs  onnx.rs  onnx_tests.rs  sampling.rs  search.rs  search_tests.rs  tree.rs  types.rs
engine/metrics-common/: Cargo.toml
engine/metrics-common/src/: lib.rs
engine/model-watcher/src/: lib.rs  load.rs  s3.rs  tests.rs
engine/model-watcher/src/s3/: download.rs  tests.rs
scripts/: overnight-run.sh
sql/: README.md
trainer/: README.md  pyproject.toml
trainer/src/trainer/: __main__.py  atomic_io.py  backoff.py  central_config.py  checkpoint.py  checkpoint_runner.py  config.py  evaluator.py  game_config.py  lr_scheduler.py  network.py  replay_setup.py  resnet.py  solver_eval.py  step_metrics.py  structured_logging.py  trainer.py  wandb_logger.py
trainer/src/trainer/games/: __init__.py  generals.py
trainer/src/trainer/orchestrator/: __init__.py  actor_runner.py  cli.py  config.py  eval_reporting.py  eval_runner.py  orchestrator.py  promotion.py  stats_manager.py
trainer/src/trainer/policies/: onnx.py
trainer/src/trainer/solver_eval/: __init__.py  cli.py  judgment.py  results.py  scorer.py
trainer/src/trainer/storage/: base.py  factory.py  filesystem.py  postgres.py  s3.py
trainer/tests/: conftest.py  test_backoff.py  test_central_config.py  test_checkpoint.py  test_eval_runner.py  test_evaluator.py  test_game_config.py  test_games.py  test_generals.py  test_lr_scheduler.py  test_orchestrator_composition.py  test_orchestrator_wandb.py  test_resnet.py  test_smoke.py  test_solver_eval.py  test_stats.py  test_storage.py  test_trainer.py  test_trainer_config_cli.py  test_wandb_logger.py
web/: Cargo.toml  Dockerfile  README.md
web/frontend/: Dockerfile  README.md  index.html  vite.config.ts
web/frontend/src/: App.svelte
web/frontend/src/lib/: api.ts
web/src/: game.rs  main.rs  main_tests.rs  metrics.rs  model_watcher.rs  startup.rs
web/src/handlers/: game.rs  health.rs  stats.rs
web/src/types/: requests.rs  responses.rs  responses_tests.rs
