[package]
name = "actor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "actor"
path = "src/main.rs"

[features]
default = []
# Enable S3/MinIO model storage for K8s deployments
s3 = ["model-watcher/s3"]
# Enable CoreML execution provider for ONNX on Apple Silicon (macOS)
coreml = ["mcts/coreml"]

[dependencies]
# Engine library (local)
engine-core = { path = "../engine/engine-core" }
engine-config = { path = "../engine/engine-config" }
engine-games = { path = "../engine/engine-games" }
mcts = { path = "../engine/mcts", features = ["onnx"] }
model-watcher = { path = "../engine/model-watcher" }

# Core dependencies
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"

# CLI and configuration
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.18"

# Error handling
anyhow = "1.0"

# Randomness
rand = "0.8"
rand_chacha = "0.3"

# Async and concurrency
async-trait = "0.1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Prometheus metrics
prometheus = "0.13"
lazy_static = "1.4"

# Progress bar
indicatif = "0.17"

# PostgreSQL for replay buffer (required)
tokio-postgres = "0.7"
deadpool-postgres = "0.14"

# Time utilities
uuid = { version = "1.6", features = ["v4"] }

[dev-dependencies]
tempfile = "3.10"
