[workspace]
members = [
    "engine-core",
    "engine-config",
    "engine-games",
    "games-tictactoe",
    "games-connect4",
    "games-othello",
    "mcts",
    "model-watcher"
]
resolver = "2"

[workspace.dependencies]
# Crypto and randomness
rand_chacha = "0.3"
rand = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Concurrency
once_cell = "1.19"

# Observability (minimal - no metrics export)
tracing = "0.1"

# Testing and benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"

# Serialization helpers
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
