[project]
name = "cartridge-trainer"
version = "0.1.0"
description = "AlphaZero-style trainer for Cartridge2"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "onnx>=1.14.0",
    "onnxscript>=0.1.0",
    "onnxruntime>=1.15.0",
    "psycopg2-binary>=2.9.0",
    "tomli>=2.0.0;python_version<'3.11'",
    "prometheus-client>=0.20.0",
    "python-json-logger>=2.0.0",
    "bitbully>=0.0.79",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
trainer = "trainer.__main__:main"
trainer-loop = "trainer.orchestrator:main"
trainer-evaluate = "trainer.evaluator:main"
trainer-solver-eval = "trainer.solver_eval:main"
# Legacy alias
evaluator = "trainer.evaluator:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
