[package]
name = "engine-config"
version = "0.1.0"
edition = "2021"
description = "Centralized configuration for Cartridge2"

[dependencies]
once_cell = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
