[package]
name = "games-connect4"
version = "0.1.0"
edition = "2021"

[dependencies]
engine-core = { path = "../engine-core" }

# Crypto and randomness
rand_chacha = { workspace = true }
rand = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Serialization
serde = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "engine"
harness = false
